Fix the component to be responsive in every device Remove the media query because it was only making the component responsive to just one screen size. Add some padding to the body so it would create same space around the component in mobile devices. Add a width of 100% to the component, and restrict that width to never be more than 330px. This will fix make the component responsive in every device. Also limit the height so it wouldn't stretch too much. Adjust the images width and height, the margins and the font sizes to make it as close as possible to the design.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
   height: 100vh;
+  padding: 20px;
   background-color: hsl(212, 45%, 89%);
   font-family: "Outfit", sans-serif;
   display: flex;
@@ -16,8 +17,9 @@ body {
 }
 
 .component {
-  width: 400px;
-  height: 630px;
+  width: 100%;
+  max-width: 330px;
+  max-height: 600px;
   padding: 18px;
   background-color: #fff;
   border-radius: 20px;
@@ -30,41 +32,21 @@ body {
 
 .component > img {
   width: 100%;
-  height: 360px;
+  max-width: 300px;
+  max-height: 360px;
   border-radius: 20px;
-  margin-bottom: 16px;
+  margin-bottom: 10px;
 }
 
 .component > h1 {
-  font-size: 26px;
+  font-size: 23px;
   color: hsl(218, 44%, 22%);
   width: 90%;
 }
 
 .component > p {
   color: hsl(220, 15%, 55%);
-  font-size: 19px;
+  font-size: 15px;
   width: 90%;
-}
-
-@media (max-width: 375px) {
-  .component {
-    padding: 15px;
-    width: 85%;
-    height: 80%;
-    padding-bottom: 0;
-  }
-
-  .component > img {
-    height: 58%;
-    margin-bottom: 12px;
-  }
-
-  .component > h1 {
-    font-size: 22px;
-  }
-
-  .component > p {
-    font-size: 15px;
-  }
+  padding-bottom: 20px;
 }
